--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,16 @@
 language: node_js
+sudo: false
 before_install:
   - "export CODECLIMATE_REPO_TOKEN=08440c2268cb7baae838e979752ab5a60dd555ec1581a99b09a0170a90e56f9f"
 install:
-  - "npm install grunt-cli codeclimate-test-reporter -g"
   - "npm install"
 script:
-  - "grunt ci"
+  - "npm run travis"
 node_js:
-  - "0.10"
-  - "0.12"
-  - "iojs-v1"
-  - "iojs-v2"
+  - "4"
+  - "5"
+  - "6"
+  - "7"
+cache:
+  directories:
+    - 'node_modules'
